2000-06-27  Jakub Jelinek  <jakub@redhat.com>

	* libio/obprintf.c (_IO_obstack_vprintf): Call obstack_make_room,
	not obstack_blank.

2000-06-26  Ulrich Drepper  <drepper@redhat.com>

	* include/libc-symbols.h (symbol_version): Add extra level of
	macro expansion.
	(default_symbol_version): Likewise.

2000-06-26  Greg McGary  <greg@mcgary.org>

	* sysdeps/i386/bp-asm.h (POP_ERRNO_LOCATION_RETURN): Fold insns.
	* sysdeps/unix/i386/sysdep.S (syscall_error): Push & pop space
	for BP return value & push implicit struct-return pointer to
	__errno_location.
	* sysdeps/unix/sysv/linux/i386/sysdep.h: Likewise.
	(SYSCALL_ERROR_HANDLER): Likewise.
	* sysdeps/unix/sysv/linux/i386/i686/sysdep.h
	(SYSCALL_ERROR_HANDLER): Likewise.

	* Makeconfig: Add missing comment.
	* csu/Makefile (extra-objs, omit-deps, install-lib): Add
	BP-flavored startup object.
	($(objpfx)b$(start-installed-name)): New rule.
	* include/libc-symbols.h (symbol_set_declare): Change type
	of `__start_##set' and `__stop_##set' to pointer-to-function.
	(symbol_set_declare): Change type of `set' to array of
	pointer-to-function.
	* include/set-hooks.h (RUN_HOOK): Change type of `ptr' to
	pointer-to-function.

	* string/bits/string2.h: Inhibit inlines if __BOUNDED_POINTERS__.

	* sysdeps/unix/sysv/linux/syscalls.list: Add missing signatures.
	Remove clock_* and timer_* entries.
	* sysdeps/unix/sysv/linux/powerpc/syscalls.list: Replace
	arg-count with signatures.

	* sysdeps/i386/add_n.S: Wrap entry-point symbol in BP_SYM ().
	Check bounds of arguments.
	* sysdeps/i386/addmul_1.S: Likewise.
	* sysdeps/i386/lshift.S: Likewise.
	* sysdeps/i386/mul_1.S: Likewise.
	* sysdeps/i386/rshift.S: Likewise.
	* sysdeps/i386/sub_n.S: Likewise.
	* sysdeps/i386/submul_1.S: Likewise.
	* sysdeps/i386/i586/add_n.S: Likewise.
	* sysdeps/i386/i586/addmul_1.S: Likewise.
	* sysdeps/i386/i586/lshift.S: Likewise.
	* sysdeps/i386/i586/rshift.S: Likewise.
	* sysdeps/i386/i586/sub_n.S: Likewise.
	* sysdeps/i386/i686/add_n.S: Likewise.
