@@ -1,3 +1,13 @@
+2000-06-27  Greg McGary  <greg@mcgary.org>
+
+	* elf/dl-open.c (_dl_sysdep_start): Wrap weak_extern decl in BP_SYM ().
+	* include/libc-symbols.h (weak_extern): Add extra level of expansion.
+	(symbol_version, default_symbol_version): Factor redundant
+	definitions out of conditional.
+	* linuxthreads/sysdeps/pthread/bits/libc-lock.h:
+	Wrap BP_SYM () around weak extern declarations of pthread
+	functions that have pointers in their return+arg signatures.
+
 2000-06-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* libio/obprintf.c (_IO_obstack_vprintf): Call obstack_make_room,
